--- a/index.html
+++ b/index.html
@@ -43,5 +43,26 @@
       width="300"
       height="300"
     />
+    <table border="1">
+      <tr>
+        <th>Họ và tên</th>
+        <th>Tuổi</th>
+        <th>Địa chỉ</th>
+      </tr>
+      <tr>
+        <td>Nguyễn Văn A</td>
+        <td>20</td>
+        <td>Hà Nội</td>
+      </tr>
+      <tr>
+        <td>Trần Thị B</td>
+        <td>22</td>
+        <td>Hồ Chí Minh</td>
+      </tr>
+      <tr>
+        <td>Lê Văn C</td>
+        <td>21</td>
+        <td>Đà Nẵng</td>
+      </tr>
   </body>
 </html>
