--- a/index.html
+++ b/index.html
@@ -3,66 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      rel="stylesheet"
+    />
+    <!-- css -->
+    <link rel="stylesheet" href="style/style.css" />
+    <title>Locker Web</title>
   </head>
   <body>
-    <h1><u>cố gắng thôi</u></h1>
-    <h2><b>cố gắng thôi</b></h2>
-    <h3><i>cố gắng thôi</i></h3>
-    <h4>cố gắng thôi</h4>
-    <h5>cố gắng thôi</h5>
-    <h6>cố gắng thôi</h6>
-    <br />
+    <h2>F-LOCK</h2>
     <hr />
-    <ul>
-      <li>item 1</li>
-      <li>item 2</li>
-      <li>item 3</li>
-      <li>item 4</li>
-      <li>item 5</li>
-    </ul>
-    <ol type="I">
-      <li>item 1</li>
-      <li>item 2</li>
-      <li>item 3</li>
-      <li>item 4</li>
-      <li>item 5</li>
-    </ol>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus hic debitis
-      velit vel sit molestias molestiae voluptatibus at illum, nulla non qui
-      maiores eligendi aliquam, quisquam architecto! Officiis, nobis ducimus.
-    </p>
-    <a href="http://www.google.com.vs" target="_blank" rel="noopener noreferrer"
-      >chạm em đi</a
-    >
-    <a href="tel:0582107477">gọi em đi</a>
-    <img
-      src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixlib=rb-4.0.3&ixid=M3w5dHx8MHx8fGFsbHwxfHx8fHwxNjg4NzI0OTI0&auto=format&fit=crop&w=500&q=60"
-      alt="ảnh đẹp"
-      width="300"
-      height="300"
-    />
-    <table border="1">
-      <tr>
-        <th>Họ và tên</th>
-        <th>Tuổi</th>
-        <th>Địa chỉ</th>
-      </tr>
-      <tr>
-        <td>Nguyễn Văn A</td>
-        <td>20</td>
-        <td>Hà Nội</td>
-      </tr>
-      <tr>
-        <td>Trần Thị B</td>
-        <td>22</td>
-        <td>Hồ Chí Minh</td>
-      </tr>
-      <tr>
-        <td>Lê Văn C</td>
-        <td>21</td>
-        <td>Đà Nẵng</td>
-      </tr>
+    <p id="title">SMART-BOX <br />HỆ THỐNG TỦ<br />THÔNG MINH</p>
+    <p id="wwa">WHO WE ARE</p>
   </body>
 </html>
