--- a/index.html
+++ b/index.html
@@ -7,13 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
     <!-- css -->
@@ -25,5 +19,55 @@
     <hr />
     <p id="title">SMART-BOX <br />HỆ THỐNG TỦ<br />THÔNG MINH</p>
     <p id="wwa">WHO WE ARE</p>
+    <hr />
+    <!-- content -->
+    <div class="content">
+      <p class="description">
+        We’re a team of two innovators creating a facial recognition smartkey
+        system for lockers – delivering security beyond traditional locks.
+      </p>
+      <div class="info">
+        <span
+          >From <br />
+          <strong>IUH</strong></span
+        >
+        <span>Since <br /><strong>2025</strong></span>
+      </div>
+    </div>
+    <!-- 4 cái ô vuông của tk đầu bùi quý -->
+    <section class="work-section">
+      <div class="card">
+        <span class="number">01</span>
+        <h3>Define</h3>
+        <p>
+          Chúng tôi bắt đầu bằng cách thấu hiểu tầm nhìn và mục tiêu của bạn,
+          sau đó cùng nhau động não những ý tưởng sáng tạo.
+        </p>
+      </div>
+
+      <span class="arrow">➜</span>
+
+      <div class="card">
+        <span class="number">02</span>
+        <h3>Design</h3>
+        <p>
+          Chúng tôi biến ý tưởng thành hiện thực bằng cách phát triển và hoàn
+          thiện hệ thống smartkey nhận diện khuôn mặt, đảm bảo tính bảo mật và
+          tiện lợi vượt trội.
+        </p>
+      </div>
+
+      <span class="arrow">➜</span>
+
+      <div class="card">
+        <span class="number">03</span>
+        <h3>Deliver</h3>
+        <p>
+          Sau khi hệ thống được hoàn thiện, chúng tôi bàn giao với đầy đủ tính
+          năng, sẵn sàng đưa vào sử dụng để mang lại trải nghiệm bảo mật cao
+          nhất.
+        </p>
+      </div>
+    </section>
   </body>
 </html>
