--- a/index.html
+++ b/index.html
@@ -69,5 +69,50 @@
         </p>
       </div>
     </section>
+
+    <!-- what we do -->
+    <section class="what-we-do">
+      <div class="header-row">
+        <h2>WHAT WE DO</h2>
+        <div class="button-group">
+          <div class="row">
+            <button>Face ID</button>
+            <button>Tracking</button>
+          </div>
+          <div class="row">
+            <button class="active">SmartKey</button>
+            <button>Remote</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="content-row">
+        <ul class="features">
+          <li>
+            <span class="number">01</span>
+            Facial Recognition Access
+          </li>
+          <li>
+            <span class="number">02</span>
+            Smartkey Management <span class="arrow">➜</span>
+          </li>
+          <li>
+            <span class="number">03</span>
+            Data & Activity Tracking
+          </li>
+          <li>
+            <span class="number">04</span>
+            Remote Control & Alerts
+          </li>
+        </ul>
+
+        <div class="feature-image">
+          <img
+            src="./design/SOURCE_IMAGE/3ab22c03a786bba289ba84a859ca6a16.jpg"
+            alt="SmartKey Image"
+          />
+        </div>
+      </div>
+    </section>
   </body>
 </html>
