--- a/index.html
+++ b/index.html
@@ -11,12 +11,27 @@
       rel="stylesheet"
     />
     <!-- css -->
-    <link rel="stylesheet" href="style/style.css" />
+    <link rel="stylesheet" href="style/main.css" />
+    <link rel="stylesheet" href="style/main_footer.css" />
+    <link rel="stylesheet" href="style/main_slide.css" />
     <title>Locker Web</title>
   </head>
+
+  <!-- BODY -->
   <body>
-    <h2>F-LOCK</h2>
+    <!-- menu -->
+    <div class="menu">
+      <h2>F-LOCK</h2>
+      <a href=".">
+        <img
+          src="./design/SOURCE_IMAGE/Menu.png"
+          alt="menu"
+          class="icon_menu"
+        />
+      </a>
+    </div>
     <hr />
+
     <p id="title">SMART-BOX <br />HỆ THỐNG TỦ<br />THÔNG MINH</p>
     <p id="wwa">WHO WE ARE</p>
     <hr />
@@ -79,8 +94,8 @@
             <button>Face ID</button>
             <button>Tracking</button>
           </div>
-          <div class="row">
-            <button class="active">SmartKey</button>
+          <div>
+            <button>SmartKey</button>
             <button>Remote</button>
           </div>
         </div>
@@ -90,7 +105,7 @@
         <ul class="features">
           <li>
             <span class="number">01</span>
-            Facial Recognition Access
+            Facial Recognition Access<span class="arrow">➜</span>
           </li>
           <li>
             <span class="number">02</span>
@@ -98,11 +113,11 @@
           </li>
           <li>
             <span class="number">03</span>
-            Data & Activity Tracking
+            Data & Activity Tracking<span class="arrow">➜</span>
           </li>
           <li>
             <span class="number">04</span>
-            Remote Control & Alerts
+            Remote Control & Alerts<span class="arrow">➜</span>
           </li>
         </ul>
 
@@ -114,5 +129,81 @@
         </div>
       </div>
     </section>
+
+    <!-- slide -->
+    <section class="location-slider">
+      <div class="slider-wrapper">
+        <div class="slide active">
+          <div class="overlay">
+            <h2>01</h2>
+            <p>LOCATION</p>
+            <span class="arrow">➜</span>
+          </div>
+        </div>
+
+        <div class="slide">
+          <div class="overlay">
+            <h2>02</h2>
+            <p>LOCATION</p>
+            <span class="arrow">➜</span>
+          </div>
+        </div>
+
+        <div class="slide">
+          <div class="overlay">
+            <h2>03</h2>
+            <p>LOCATION</p>
+            <span class="arrow">➜</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="slider-controls">
+        <button class="prev">
+          <img src="./design/SOURCE_IMAGE/buttonleft.png" alt="Previous" />
+        </button>
+        <button class="next">
+          <img src="./design/SOURCE_IMAGE/buttonright.png" alt="Next" />
+        </button>
+      </div>
+    </section>
+    <!-- gọi file JS -->
+    <script src="slider.js"></script>
   </body>
+
+  <!-- footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-left">
+        <h2 id="end_F">F-LOCK</h2>
+        <p>
+          Tủ khóa thông minh của chúng tôi mang đến sự an toàn và tiện lợi. Hãy
+          biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và bảo
+          mật hơn!
+        </p>
+        <nav class="footer-nav">
+          <a href="#">Home</a>
+          <a href="#">User Guide</a>
+          <a href="#">Open Locker</a>
+          <a href="#">About</a>
+        </nav>
+      </div>
+
+      <div class="footer-right">
+        <p>
+          Are you ready to unlock a smarter and more secure experience with our
+          device?
+        </p>
+        <p>
+          Drop us a line at <br />
+          <a href="mailto:aicungvay321@gmail.com" class="email-link">
+            aicungvay321@gmail.com
+          </a>
+        </p>
+      </div>
+    </div>
+
+    <hr class="footer-line" />
+    <p class="copyright">© 2025 F-LOCK. All rights reserved.</p>
+  </footer>
 </html>
