--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="style/main.css" />
     <link rel="stylesheet" href="style/main_footer.css" />
     <link rel="stylesheet" href="style/main_slide.css" />
+    <link rel="stylesheet" href="style/main_header.css" />
+
     <title>Locker Web</title>
   </head>
 
@@ -22,7 +24,7 @@
     <!-- menu -->
     <div class="menu">
       <h2>F-LOCK</h2>
-      <a href=".">
+      <a href="./menu.html">
         <img
           src="./design/SOURCE_IMAGE/Menu.png"
           alt="menu"
@@ -31,11 +33,11 @@
       </a>
     </div>
     <hr />
-
+    <!-- content -->
     <p id="title">SMART-BOX <br />HỆ THỐNG TỦ<br />THÔNG MINH</p>
     <p id="wwa">WHO WE ARE</p>
     <hr />
-    <!-- content -->
+
     <div class="content">
       <p class="description">
         We’re a team of two innovators creating a facial recognition smartkey
@@ -168,7 +170,9 @@
       </div>
     </section>
     <!-- gọi file JS -->
-    <script src="slider.js"></script>
+    <script src="./animation/slider.jsx"></script>
+
+    <script src="./animation/slider.jsx"></script>
   </body>
 
   <!-- footer -->
