--- a/menu.html
+++ b/menu.html
@@ -18,7 +18,7 @@
       <div class="left-side">
         <div class="logo">F-LOCK</div>
         <nav class="footer-nav">
-          <a href="#">Home</a>
+          <a href="index.html">Home</a>
           <a href="#">User Guide</a>
           <a href="#">Open Locker</a>
           <a href="#">About</a>
