--- a/menu.html
+++ b/menu.html
@@ -20,8 +20,8 @@
         <nav class="footer-nav">
           <a href="index.html">Home</a>
           <a href="#">User Guide</a>
-          <a href="#">Open Locker</a>
-          <a href="#">About</a>
+          <a href="open.html">Open Locker</a>
+          <a href="about_us.html">About</a>
         </nav>
       </div>
 
