--- a/index.html
+++ b/index.html
@@ -52,40 +52,32 @@
       </div>
     </div>
     <!-- 4 cái ô vuông của tk đầu bùi quý -->
-    <section class="work-section">
-      <div class="card">
-        <span class="number">01</span>
-        <h3>Define</h3>
-        <p>
-          Chúng tôi bắt đầu bằng cách thấu hiểu tầm nhìn và mục tiêu của bạn,
-          sau đó cùng nhau động não những ý tưởng sáng tạo.
-        </p>
-      </div>
+    <section class="work-section-wrapper">
+  <div class="work-section">
+    <div class="card">
+      <span class="number">01</span>
+      <h3>Define</h3>
+      <p>Chúng tôi bắt đầu bằng cách thấu hiểu tầm nhìn và mục tiêu của bạn...</p>
+    </div>
 
-      <span class="arrow">➜</span>
+    <span class="arrow">➜</span>
 
-      <div class="card">
-        <span class="number">02</span>
-        <h3>Design</h3>
-        <p>
-          Chúng tôi biến ý tưởng thành hiện thực bằng cách phát triển và hoàn
-          thiện hệ thống smartkey nhận diện khuôn mặt, đảm bảo tính bảo mật và
-          tiện lợi vượt trội.
-        </p>
-      </div>
+    <div class="card">
+      <span class="number">02</span>
+      <h3>Design</h3>
+      <p>Chúng tôi biến ý tưởng thành hiện thực bằng cách phát triển hệ thống...</p>
+    </div>
 
-      <span class="arrow">➜</span>
+    <span class="arrow">➜</span>
 
-      <div class="card">
-        <span class="number">03</span>
-        <h3>Deliver</h3>
-        <p>
-          Sau khi hệ thống được hoàn thiện, chúng tôi bàn giao với đầy đủ tính
-          năng, sẵn sàng đưa vào sử dụng để mang lại trải nghiệm bảo mật cao
-          nhất.
-        </p>
-      </div>
-    </section>
+    <div class="card">
+      <span class="number">03</span>
+      <h3>Deliver</h3>
+      <p>Sau khi hệ thống hoàn thiện, chúng tôi bàn giao với đầy đủ tính năng...</p>
+    </div>
+  </div>
+</section>
+
 
     <!-- what we do -->
     <section class="what-we-do">
@@ -133,45 +125,34 @@
     </section>
 
     <!-- slide -->
-    <section class="location-slider">
-      <div class="slider-wrapper">
-        <div class="slide active">
-          <div class="overlay">
-            <h2>01</h2>
-            <p>LOCATION</p>
-            <span class="arrow">➜</span>
-          </div>
-        </div>
+   <section class="location-slider">
+  <div class="slider-viewport">
+    <div class="slider-track">
+      <!-- 9 slide -->
+      <div class="slide"><div class="overlay"><h2>01</h2><p>LOCATION</p><span class="arrow">➜</span></div></div>
+      <div class="slide"><div class="overlay"><h2>02</h2><p>LOCATION</p><span class="arrow">➜</span></div></div>
+      <div class="slide"><div class="overlay"><h2>03</h2><p>LOCATION</p><span class="arrow">➜</span></div></div>
+      <div class="slide"><div class="overlay"><h2>04</h2><p>LOCATION</p><span class="arrow">➜</span></div></div>
+      <div class="slide"><div class="overlay"><h2>05</h2><p>LOCATION</p><span class="arrow">➜</span></div></div>
+      <div class="slide"><div class="overlay"><h2>06</h2><p>LOCATION</p><span class="arrow">➜</span></div></div>
+      <div class="slide"><div class="overlay"><h2>07</h2><p>LOCATION</p><span class="arrow">➜</span></div></div>
+      <div class="slide"><div class="overlay"><h2>08</h2><p>LOCATION</p><span class="arrow">➜</span></div></div>
+      <div class="slide"><div class="overlay"><h2>09</h2><p>LOCATION</p><span class="arrow">➜</span></div></div>
+    </div>
+  </div>
 
-        <div class="slide">
-          <div class="overlay">
-            <h2>02</h2>
-            <p>LOCATION</p>
-            <span class="arrow">➜</span>
-          </div>
-        </div>
+  <div class="slider-controls">
+    <button class="prev">
+      <img src="./design/SOURCE_IMAGE/buttonleft.png" alt="Previous" />
+    </button>
+    <button class="next">
+      <img src="./design/SOURCE_IMAGE/buttonright.png" alt="Next" />
+    </button>
+  </div>
+</section>
 
-        <div class="slide">
-          <div class="overlay">
-            <h2>03</h2>
-            <p>LOCATION</p>
-            <span class="arrow">➜</span>
-          </div>
-        </div>
-      </div>
-
-      <div class="slider-controls">
-        <button class="prev">
-          <img src="./design/SOURCE_IMAGE/buttonleft.png" alt="Previous" />
-        </button>
-        <button class="next">
-          <img src="./design/SOURCE_IMAGE/buttonright.png" alt="Next" />
-        </button>
-      </div>
-    </section>
-    <!-- gọi file JS -->
-    <script src="./animation/slider.jsx"></script>
-  </body>
+<!-- include JS ở cuối body -->
+<script src="./animation/slider.jsx"></script>
 
   <!-- footer -->
   <footer class="footer">
