--- a/about_us.html
+++ b/about_us.html
@@ -16,17 +16,20 @@
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/about_us.css" />
     <!-- menu -->
-    <div class="menu">
-      <h2>F-LOCK</h2>
-      <a href="./menu.html">
-        <img
-          src="./design/SOURCE_IMAGE/Menu.png"
-          alt="menu"
-          class="icon_menu"
-        />
-      </a>
-    </div>
-    <hr />
+     <section class="o"><div class="menu">
+        <h2>F-LOCK</h2>
+        <a href="./menu.html">
+          <img
+            src="./design/SOURCE_IMAGE/Menu.png"
+            alt="menu"
+            class="icon_menu"
+          />
+        </a>
+        </div>
+      <hr></section>
+     
+    <!-- header -->
+    
     <div class="header">
       <p id="row1">Our people</p>
       <h1>We are the better together</h1>
