--- a/menu.html
+++ b/menu.html
@@ -19,7 +19,7 @@
         <div class="logo">F-LOCK</div>
         <nav class="footer-nav">
           <a href="index.html">Home</a>
-          <a href="#">User Guide</a>
+          <a href="guild.html">User Guide</a>
           <a href="open.html">Open Locker</a>
           <a href="about_us.html">About</a>
         </nav>
@@ -35,7 +35,10 @@
         <div class="form-container">
           <h1 class="headline">Want to register a locker?</h1>
           <p class="subheadline">Let's make it happen together!</p>
-          <a href="./register.html" class="signup-btn">Sign Up</a>
+          <div class="button-group">
+            <a href="./register.html" class="signup-btn">Sign Up</a>
+            <a href="./logon.html" class="signin-btn">Sign In</a>
+          </div>
         </div>
       </div>
     </div>
