--- a/register.html
+++ b/register.html
@@ -18,17 +18,20 @@
   </head>
   <body>
     <!-- menu -->
-    <div class="menu">
-      <h2>F-LOCK</h2>
-      <a href="./menu.html">
-        <img
-          src="./design/SOURCE_IMAGE/Menu.png"
-          alt="menu"
-          class="icon_menu"
-        />
-      </a>
-    </div>
-    <hr />
+    <section class="o">
+      <div class="menu">
+        <h2>F-LOCK</h2>
+        <a href="./menu.html">
+          <img
+            src="./design/SOURCE_IMAGE/Menu.png"
+            alt="menu"
+            class="icon_menu"
+          />
+        </a>
+      </div>
+      <hr />
+    </section>
+    <!-- header -->
     <div class="header">
       <p id="row1">Register</p>
       <h1>Ready to take the next step?</h1>
