--- a/logon.html
+++ b/logon.html
@@ -10,11 +10,13 @@
       href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <title>Register - Start Your Journey</title>
     <!-- css -->
+    <title>Sign In - F-LOCK</title>
     <link rel="stylesheet" href="style/main_header.css" />
-    <link rel="stylesheet" href="./style/main_footer.css" />
-    <link rel="stylesheet" href="./style/scan.css" />
+    <link rel="stylesheet" href="style/main_footer.css" />
+    <link rel="stylesheet" href="style/logon.css" />
+  </head>
+  <body>
     <!-- menu -->
     <section class="o">
       <div class="menu">
@@ -31,26 +33,28 @@
     </section>
     <!-- header -->
     <div class="header">
-      <p id="row1">Our people</p>
-      <h1>We are the better together</h1>
+      <p id="row1">SIGN IN</p>
+      <h1>Ready to take the next step?</h1>
+      <p id="row3">Fill out the form to start your journey with us</p>
+    </div>
 
-      <p id="row3">
-        Together, we create a positive impact. Meet the Dapixel team and see how
-        we turn great ideas into results
-      </p>
-    </div>
-  </head>
-  <!-- content -->
-  <body>
-    <div class="face-scan-wrapper">
-      <img
-        src="./design/SOURCE_IMAGE/scan.jpg"
-        alt="face scan"
-        class="face_scan"
-      />
-    </div>
-    <div class="more-info">
-      <h1>We are the better together</h1>
+    <!-- Form đăng nhập -->
+    <div class="register-container login-container">
+      <div class="right-side">
+        <form id="loginForm">
+          <div class="form-group full">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required />
+          </div>
+
+          <div class="form-group full">
+            <label for="password">Password</label>
+            <input type="password" id="password" name="password" required />
+          </div>
+
+          <button type="submit" class="btn">LOG ON</button>
+        </form>
+      </div>
     </div>
   </body>
 
@@ -64,19 +68,8 @@
           biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và bảo
           mật hơn!
         </p>
-        <nav class="footer-nav">
-          <a href="#">Home</a>
-          <a href="#">User Guide</a>
-          <a href="#">Open Locker</a>
-          <a href="#">About</a>
-        </nav>
       </div>
-
       <div class="footer-right">
-        <p>
-          Are you ready to unlock a smarter and more secure experience with our
-          device?
-        </p>
         <p>
           Drop us a line at <br />
           <a href="mailto:aicungvay321@gmail.com" class="email-link">
@@ -85,7 +78,6 @@
         </p>
       </div>
     </div>
-
     <hr class="footer-line" />
     <p class="copyright">© 2025 F-LOCK. All rights reserved.</p>
   </footer>
