--- a/about_us.html
+++ b/about_us.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Epilogue:ital,wght@0,100..900;1,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Rubik+Mono+One&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <title>Register - Start Your Journey</title>
+    <title>About us</title>
     <!-- css -->
     <link rel="stylesheet" href="style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
