--- a/logon.html
+++ b/logon.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <!-- css -->
-    <title>Sign In - F-LOCK</title>
+    <title>Sign up - F-LOCK</title>
     <link rel="stylesheet" href="style/main_header.css" />
     <link rel="stylesheet" href="style/main_footer.css" />
     <link rel="stylesheet" href="style/logon.css" />
