--- a/menu.html
+++ b/menu.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/menu.css" />
+    <title>Menu - F-LOCK</title>
   </head>
   <body>
     <div class="container">
