--- a/guild.html
+++ b/guild.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="style/main_header.css" />
     <link rel="stylesheet" href="style/main_footer.css" />
     <link rel="stylesheet" href="style/guild.css" />
+    <link rel="stylesheet" href="./style/responsive.css" />
   </head>
   <body>
     <!-- menu -->
