--- a/scan.html
+++ b/scan.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/scan.css" />
+    <link rel="stylesheet" href="./style/responsive.css" />
     <!-- menu -->
     <section class="o">
       <div class="menu">
