--- a/menu.html
+++ b/menu.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style/menu.css" />
-    <link rel="stylesheet" href="./style/responsive.css" />
+    <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
     <title>Menu - F-LOCK</title>
   </head>
   <body>
