--- a/register.html
+++ b/register.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="style/main_header.css" />
     <link rel="stylesheet" href="./style/register.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
-    <link rel="stylesheet" href="./style/responsive.css" />
+    <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
   </head>
   <body>
     <!-- menu -->
