--- a/about_us.html
+++ b/about_us.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style/main_header.css" />
     <link rel="stylesheet" href="./style/main_footer.css" />
     <link rel="stylesheet" href="./style/about_us.css" />
-    <link rel="stylesheet" href="./style/responsive.css" />
+    <!-- <link rel="stylesheet" href="./style/responsive.css" /> -->
     <!-- menu -->
      <section class="o"><div class="menu">
         <h2>F-LOCK</h2>
