--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
     </ul>
 
     <div class="img-placeholder">
-      <img class="rotated-image" src="images/Faceid-01.png" alt="Design">
+      <img class="rotated-image" src="./design/SOURCE_IMAGE/faceid.png" alt="Design">
     </div>
   </div>
 </section>
 
     <!-- include JS ở cuối body -->
-<script src="./animation/WhatWeDo.jsx"></script>
+<script src="./animation/wwd.jsx"></script>
 
 
     <!-- slide -->
