--- a/open.html
+++ b/open.html
@@ -85,10 +85,10 @@
           mật hơn!
         </p>
         <nav class="footer-nav">
-          <a href="#">Home</a>
-          <a href="#">User Guide</a>
-          <a href="#">Open Locker</a>
-          <a href="#">About</a>
+          <a href="index.html">Home</a>
+          <a href="guild.html">User Guide</a>
+          <a href="open.html">Open Locker</a>
+          <a href="about_us.html">About</a>
         </nav>
       </div>
 
