--- a/about_us.html
+++ b/about_us.html
@@ -107,9 +107,9 @@
           mật hơn!
         </p>
         <nav class="footer-nav">
-          <a href="#">Home</a>
-          <a href="#">User Guide</a>
-          <a href="#">Open Locker</a>
+          <a href="index.html">Home</a>
+          <a href="guild.html">User Guide</a>
+          <a href="open.html">Open Locker</a>
           <a href="#">About</a>
         </nav>
       </div>
