--- a/guild.html
+++ b/guild.html
@@ -91,29 +91,40 @@
         </div>
       </div>
     </section>
-
-    <!-- footer -->
-    <footer class="footer">
-      <div class="footer-content">
-        <div class="footer-left">
-          <h2 id="end_F">F-LOCK</h2>
-          <p>
-            Tủ khóa thông minh của chúng tôi mang đến sự an toàn và tiện lợi.
-            Hãy biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và
-            bảo mật hơn!
-          </p>
-        </div>
-        <div class="footer-right">
-          <p>
-            Drop us a line at <br />
-            <a href="mailto:aicungvay321@gmail.com" class="email-link">
-              aicungvay321@gmail.com
-            </a>
-          </p>
-        </div>
-      </div>
-      <hr class="footer-line" />
-      <p class="copyright">© 2025 F-LOCK. All rights reserved.</p>
-    </footer>
   </body>
+  <!-- footer -->
+  <footer class="footer">
+    <div class="footer-content">
+      <div class="footer-left">
+        <h2 id="end_F">F-LOCK</h2>
+        <p>
+          Tủ khóa thông minh của chúng tôi mang đến sự an toàn và tiện lợi. Hãy
+          biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và bảo
+          mật hơn!
+        </p>
+        <nav class="footer-nav">
+          <a href="index.html">Home</a>
+          <a href="#">User Guide</a>
+          <a href="open.html">Open Locker</a>
+          <a href="about_us.html">About</a>
+        </nav>
+      </div>
+
+      <div class="footer-right">
+        <p>
+          Are you ready to unlock a smarter and more secure experience with our
+          device?
+        </p>
+        <p>
+          Drop us a line at <br />
+          <a href="mailto:aicungvay321@gmail.com" class="email-link">
+            aicungvay321@gmail.com
+          </a>
+        </p>
+      </div>
+    </div>
+
+    <hr class="footer-line" />
+    <p class="copyright">© 2025 F-LOCK. All rights reserved.</p>
+  </footer>
 </html>
