--- a/logon.html
+++ b/logon.html
@@ -69,8 +69,19 @@
           biến việc lưu trữ hằng ngày thành một trải nghiệm thông minh và bảo
           mật hơn!
         </p>
+        <nav class="footer-nav">
+          <a href="index.html">Home</a>
+          <a href="guild.html">User Guide</a>
+          <a href="open.html">Open Locker</a>
+          <a href="#">About</a>
+        </nav>
       </div>
+
       <div class="footer-right">
+        <p>
+          Are you ready to unlock a smarter and more secure experience with our
+          device?
+        </p>
         <p>
           Drop us a line at <br />
           <a href="mailto:aicungvay321@gmail.com" class="email-link">
@@ -79,6 +90,7 @@
         </p>
       </div>
     </div>
+
     <hr class="footer-line" />
     <p class="copyright">© 2025 F-LOCK. All rights reserved.</p>
   </footer>
