--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style/main_slide.css" />
     <link rel="stylesheet" href="style/main_header.css" />
     <link rel="stylesheet" href="./style/main_whatwedo.css" />
-    <!-- <link rel="stylesheet" href="style/responsive.css" /> -->
+    <link rel="stylesheet" href="./style/responsive_web.css" /> 
     <title>Locker Web</title>
   </head>
 
