--- a/open.html
+++ b/open.html
@@ -73,6 +73,7 @@
         </a>
       </div>
     </div>
+    <script src="./animation/logon.jsx"></script>
   </body>
   <!-- footer -->
   <footer class="footer">
