--- a/guild.html
+++ b/guild.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="style/main_footer.css" />
     <link rel="stylesheet" href="style/guild.css" />
     <link rel="stylesheet" href="./style/responsive.css" />
+    
   </head>
   <body>
     <!-- menu -->
@@ -91,6 +92,8 @@
         </div>
       </div>
     </section>
+    <script src="./animation/logon.jsx"></script>
+
   </body>
   <!-- footer -->
   <footer class="footer">
