--- a/guild.html
+++ b/guild.html
@@ -15,7 +15,6 @@
     <link rel="stylesheet" href="style/main_footer.css" />
     <link rel="stylesheet" href="style/guild.css" />
     <link rel="stylesheet" href="./style/responsive.css" />
-    
   </head>
   <body>
     <!-- menu -->
@@ -92,8 +91,7 @@
         </div>
       </div>
     </section>
-    <script src="./animation/logon.jsx"></script>
-
+    <script src="./backend/auth_protect.js"></script>
   </body>
   <!-- footer -->
   <footer class="footer">
