--- a/open.html
+++ b/open.html
@@ -73,7 +73,7 @@
         </a>
       </div>
     </div>
-    <script src="./animation/logon.jsx"></script>
+    <script src="./backend/auth_protect.js"></script>
   </body>
   <!-- footer -->
   <footer class="footer">
