--- a/logon.html
+++ b/logon.html
@@ -57,7 +57,7 @@
         </form>
       </div>
     </div>
-    <script src="./animation/logon.jsx"></script>
+    <script src="./backend/logon.js"></script>
   </body>
 
   <!-- footer -->
