--- a/register.html
+++ b/register.html
@@ -97,7 +97,7 @@
       </div>
     </div>
 
-    <script src="./animation/register.jsx"></script>
+    <script src="./backend/register.js"></script>
   </body>
   <footer class="footer">
     <div class="footer-content">
