--- a/logon.html
+++ b/logon.html
@@ -54,6 +54,10 @@
           </div>
 
           <button type="submit" class="btn">LOG ON</button>
+          <div class="register-link">
+            If you don’t have an account, please
+            <a href="register.html">Register</a>
+          </div>
         </form>
       </div>
     </div>
