--- a/register.html
+++ b/register.html
@@ -91,7 +91,7 @@
           <button type="submit" class="btn">SAVE</button>
           <p class="login-hint">
             If you already have an account, please click
-            <a href="menu.html">log on</a>
+            <a href="logon.html">log on</a>
           </p>
         </form>
       </div>
