--- a/menu.html
+++ b/menu.html
@@ -44,6 +44,6 @@
         </div>
       </div>
     </div>
-    <script src="menu.js"></script>
+    <script src="./backend/menu.js"></script>
   </body>
 </html>
