--- a/index.html
+++ b/index.html
@@ -138,73 +138,65 @@
     <script src="./animation/wwd.jsx"></script>
 
     <!-- slide -->
+    <!-- slide -->
     <section class="location-slider">
       <div class="slider-viewport">
         <div class="slider-track">
           <!-- 9 slide -->
-          <div class="slide">
+          <a href="scan.html" class="slide">
             <div class="overlay">
               <h2>01</h2>
               <p>LOCATION</p>
-              <span class="arrow">➜</span>
             </div>
-          </div>
-          <div class="slide">
+          </a>
+          <a href="scan.html" class="slide">
             <div class="overlay">
               <h2>02</h2>
               <p>LOCATION</p>
-              <span class="arrow">➜</span>
             </div>
-          </div>
-          <div class="slide">
+          </a>
+          <a href="scan.html" class="slide">
             <div class="overlay">
               <h2>03</h2>
               <p>LOCATION</p>
-              <span class="arrow">➜</span>
             </div>
-          </div>
-          <div class="slide">
+          </a>
+          <a href="scan.html" class="slide">
             <div class="overlay">
               <h2>04</h2>
               <p>LOCATION</p>
-              <span class="arrow">➜</span>
             </div>
-          </div>
-          <div class="slide">
+          </a>
+          <a href="scan.html" class="slide">
             <div class="overlay">
               <h2>05</h2>
               <p>LOCATION</p>
-              <span class="arrow">➜</span>
             </div>
-          </div>
-          <div class="slide">
+          </a>
+          <a href="scan.html" class="slide">
             <div class="overlay">
               <h2>06</h2>
               <p>LOCATION</p>
-              <span class="arrow">➜</span>
             </div>
-          </div>
-          <div class="slide">
+          </a>
+          <a href="scan.html" class="slide">
             <div class="overlay">
               <h2>07</h2>
               <p>LOCATION</p>
-              <span class="arrow">➜</span>
             </div>
-          </div>
-          <div class="slide">
+          </a>
+          <a href="scan.html" class="slide">
             <div class="overlay">
               <h2>08</h2>
               <p>LOCATION</p>
-              <span class="arrow">➜</span>
             </div>
-          </div>
-          <div class="slide">
+          </a>
+          <a href="scan.html" class="slide">
             <div class="overlay">
               <h2>09</h2>
               <p>LOCATION</p>
-              <span class="arrow">➜</span>
             </div>
-          </div>
+          </a>
         </div>
       </div>
 
